Fixed form-container width in items#new. And also 100vh of items-new-container on mobile

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -279,7 +279,21 @@ div#new-item-container {
 			}
 		} // div#input-container
 	} //div#form-container
-}
+	@media screen and (max-width: $break-iphone6plus) {
+		min-height: 100vh;
+		background-color: white;
+		margin: 0;
+		div.clearfixs {
+			div#form-container {
+				box-shadow: none;
+				div#input-container {
+					width: 100%;
+					margin: 0;
+				} //div#input-container
+			} //div#form-container
+		} //div.clearfixs
+	} //div#new-item-container max-width $break-iphone6plus
+} //div#new-item-container
 
 // ********** item#my_items **********
 	div#my-items-container {
